# gse

./: .env  Cargo.toml  Rocket.toml  testdb.db
docs/: steps.md
migrations/2023-02-12-145923_create_players/: down.sql  up.sql
src/: db.rs  lib.rs  lib.rs.ignore  main.rs  main.rs.ignore  models.rs  models.rs.ignore  routes.rs.ignore  schema.rs  tests.rs
static/: gse.css  index.html
static/tfl/: index.html
