[package]
name = "gse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_derive ="0.1.7"
diesel = { version = "2.0.3", features = ["sqlite"] }
dotenv = { version = "0.15.0" }
r2d2-diesel = "1.0"
r2d2 = "0.8.10"
rocket = { version = "0.5.0-rc.2", features = ["tls", "mtls"] }
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"

